@@ -42,8 +42,9 @@ Changes in version 1.7-0
   * plm object: gained element 'weights' if weighted estimation was performed.
   * pgmm object: removed element 'df.residual' for now as it contained the
     function of the same name rather than a number.
-  * plm/ercomp: case of non-estimable 'amemiya' model due to variables lacking
-    within variation in individual or time dimension gives informative error.
+  * plm/ercomp: informative error messages for non-estimable 'swar' and 'amemiya'
+    models when between model lacks observations ('swar') and individual or
+    time dimension lacks within variation ('amemiya').
 
 
 Changes in version 1.6-6
